# studentidcard

./: README.md  pyproject.toml
studentidcard/: hooks.py  modules.txt
studentidcard/student_id_card/doctype/id_card/: id_card.js  id_card.json  id_card.py  test_id_card.py
studentidcard/student_id_card/doctype/student/: student.js  student.json  student.py  test_student.py
studentidcard/student_id_card/doctype/student_entrance_license/: student_entrance_license.js  student_entrance_license.json  student_entrance_license.py  test_student_entrance_license.py
studentidcard/student_id_card/doctype/student_id_card/: student_id_card.js  student_id_card.json  student_id_card.py  test_student_id_card.py
